src/style/App.css
/* ... */
.category ol li {
  list-style: none;
  margin: 0.2rem 0.5rem;
  color: #04525f;
}

.category ol li span {
  color: #0c8fa5;
  margin-left: 0.2rem;
  text-shadow: 0px 0px 1px rgba(0, 0, 0, 0.1);
}

/* Table of contents */

.toc li[data-content]::before {
  content: attr(data-content);
}

.toc {
  overflow-y: scroll;
  position: fixed;
  left: 0;
  top: 0;
  height: 100vh;
  /* z-index: 50; */
  /* Version that draws above navbar */
  z-index: 1050;
  width: 100%;
  min-width: 240px;
  max-width: 380px;
  padding: 1rem;
  transform: translateX(-100%);
  transition: transform 0.3s;
  background: rgb(40, 40, 40);
  /* margin: 0; */
}

.toc li {
  list-style: none;
  /* margin-top: 0.8rem; */
  cursor: pointer;
  color: rgb(180, 180, 180);
}

.toc li:hover {
  color: rgb(255, 255, 255);
  background: rgb(48, 48, 48);
}

.toc-entry {
  font-weight: bold;
}

.toc ol {
  padding-left: 0;
}

.toc li {
  padding: 0.5rem;
  padding-left: 1rem;
  border-radius: 8px;
}

.toc-entry + ol li {
  margin-left: 1.5rem;
}

.toc-entry + ol li:last-of-type {
  margin-bottom: 2rem;
}

.toc-click {
  transition: background-color 0.3s;
  background-color: none;
  position: fixed;
  /* z-index: 49; */
  /* Version that draws above navbar */
  z-index: 1049;
  height: 0;
  width: 0;
  left: 0;
  top: 0;
}

.toc.expanded {
  transform: translateX(0);
  box-shadow: 4px 0px 10px rgba(0, 0, 0, 0.5);
}

.toc-click.expanded {
  background-color: rgba(0, 0, 0, 0.5);
  width: 100vw;
  height: 100vh;
}

#floating-toc-btn {
  position: fixed;
  right: 1rem;
  bottom: 1rem;
  border-radius: 0.25rem;
}

#floating-toc-btn button {
  padding: 0.5rem;
  margin: auto;
  width: fit-content;
}

#floating-toc-btn img {
  margin: auto;
}

/* Vote submission */

#controls {
  z-index: 40;
  width: 100%;
  max-width: 364px;
  padding: 0.75rem;
  position: fixed;
  display: flex;
  bottom: 1rem;
  right: 1rem;
  height: 80px;
}

#controls > .btn,
#floating-toc-btn {
  box-shadow: -1px -1px 2px rgba(255, 255, 255, 0.5),
    0px 2px 3px rgba(0, 0, 0, 0.4);
  /* border: none; */
  transition: all 0.2s;
}

#controls > .btn:not(.submitting-btn):hover {
  transform: translateY(-3px);
}

#controls .btn-primary {
  background-color: #054b96;
  border-color: #1674d8;
}

#controls .btn-primary:not(.submitting-btn):hover {
  /* background-color: #076fdd;
  border-color: #3496ff; */
  background-color: #023266;
  border-color: #0e61b9;
}

#controls .btn-light,
#floating-toc-btn button {
  color: #0056b1;
  border-color: #b8b8b8;
}

#controls .btn-light:hover,
#floating-toc-btn button:hover {
  background-color: #eceeff;
}

#open-toc {
  margin-right: 0.75rem;
  padding: 6px;
  width: 56px;
}

#submit-votes {
  flex-grow: 10;
}

#submit-votes[disabled]:not(.submitting-btn) {
  opacity: 100;
  color: #0056b1;
  background-color: #dbecff;
}

#submit-votes[disabled]:hover {
  cursor: not-allowed !important;
}

/*=  Masonry stuff  =*/

.masonry-grid {
  display: -webkit-box; /* Not needed if autoprefixing */
  display: -ms-flexbox; /* Not needed if autoprefixing */
  display: flex;
  width: 100%;
}

.masonry-column {
  background-clip: padding-box;
}

.masonry-column > div {
  display: flex;
  max-width: 100%;
  flex-grow: 100;
}

/*= Lightbox =*/

.lightbox {
  position: fixed;
  z-index: 1100;
  height: 100vh;
  width: 100vw;
  left: 0;
  top: 0;
  display: flex;
  padding: 0 2rem;
}

.lightbox-overlay {
  position: absolute;
  top: 0;
  left: 0;
}

.lightbox-overlay {
  z-index: 1100;
  width: 100vw;
  height: 100vh;
  background-color: rgba(0, 0, 0, 0.95);
}

.lightbox-body {
  z-index: 1101;
  max-width: 800px;
  max-height: calc(100vh - 4rem);
  margin: auto auto;
  overflow-y: scroll;
  color: rgba(255, 255, 255, 0.9);
  border-radius: 1rem;
}

.lightbox-img > img {
  overflow-y: scroll;
  width: 100% !important;
  height: auto;
}

.lightbox-img {
  overflow-y: scroll;
}

.lightbox-info {
  top: 0;
  width: 100%;
  position: sticky;
  padding: 1rem 1rem;
  background-color: rgba(15, 41, 97, 0.6);
  box-shadow: 0 3px 1rem rgba(0, 0, 0, 0.6);
  justify-content: space-between;
  backdrop-filter: blur(8px);
  display: flex;
  overflow: hidden;
}

.lightbox-info > *:not(.lightbox-blurred) {
  z-index: 1101;
}

/* .lightbox-blurred {
  position: absolute;
  width: 150%;
  z-index: 1100;
  filter: blur(16px) brightness(0.5) contrast(0.5);
  margin: 0;
  margin-left: -25%;
  margin-top: -50%;
} */

.lightbox-info > a {
  text-shadow: 0 0 5px rgba(0, 0, 0, 0.6);
  padding-left: 0.5rem;
  margin: auto 0;
  color: white;
  transition: color 0.2s;
  text-decoration: underline;
  font-size: 14pt;
}

.lightbox-info > a:hover {
  color: #35d7ff;
}

.lightbox-controls {
  display: flex;
  height: 100%;
}

.lightbox-controls > button {
  box-shadow: 0 0 3px rgba(0, 0, 0, 0.5), 0 0 4px rgba(255, 255, 255, 0.75);
}

.lightbox-controls .btn {
  height: 48px;
  width: 128px;
  font-size: 14pt;
  margin: auto 1rem;
  border-radius: 2rem;
  border: none !important;
}

.lightbox-controls .btn-outline-primary:not(:hover) {
  color: white;
  background-color: rgba(0, 0, 0, 0.6);
}

.lightbox-controls > .btn-primary:hover {
  background-color: #006adb;
}

.lightbox-close {
  all: unset;
  width: 52px;
  height: 42px;
  text-align: center;
  padding-bottom: 10px;
  font-size: 24pt !important;
  background-color: rgba(0, 0, 0, 0.6);
  border-radius: 100%;
  margin: auto;
  color: rgba(240, 240, 240);
  transition: all 0.2s;
}

.lightbox-close:hover {
  color: black;
  background-color: white;
}

/*=  Results styling  =*/

@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital@0;1&display=swap');

.results {
  width: 100%;
  max-width: 1000px;
  margin: auto;
}
/* ... */

